# opencv-zbar-decode

./: .gitignore  CMakeLists.txt  README.md  main.cpp
