cmake_minimum_required (VERSION 2.6)
project (ZBARCV)
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++17 -pthread")
add_subdirectory(zxing-cpp)
set(CMAKE_MODULE_PATH ${ZBARCV_SOURCE_DIR})
find_package (OpenCV)
include_directories(${OpenCV_INCLUDE_DIRS})
include_directories(zxing-cpp/core/src)
find_package (ZBar0)
add_executable (zbar_opencv main.cpp)
target_link_libraries (zbar_opencv ${OpenCV_LIBRARIES} ${ZBAR_LIBRARIES} zbar ZXing::ZXing)
